--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,15 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.23",
+    "pinia": "^2.1.6",
     "vue": "^3.4.20",
-    "vue-router": "^4.3.0",
-    "pinia": "^2.1.6"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.1",
-    "vite": "^6.3.5",
-    "tailwindcss": "^3.4.17",
     "autoprefixer": "^10.4.17",
-    "postcss": "^8.4.33"
+    "postcss": "^8.4.33",
+    "tailwindcss": "^3.4.17",
+    "vite": "^6.3.5"
   }
 }
