Make design for a page for horoscope

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,15 +5,23 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "pinia": "^2.1.6",
+    "swiper": "^11.1.0",
+    "lucide-vue-next": "0.511.0",
     "vue": "^3.4.20",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "vitest": "^1.5.0",
+    "@vue/test-utils": "^2.4.5",
+    "jsdom": "^24.0.0",
     "@vitejs/plugin-vue": "^5.0.1",
     "autoprefixer": "^10.4.17",
     "postcss": "^8.4.33",
