--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@headlessui/vue": "^1.7.23",
     "pinia": "^2.1.6",
     "swiper": "^11.1.0",
+    "dayjs": "^1.11.11",
     "lucide-vue-next": "0.511.0",
     "vue": "^3.4.20",
     "vue-router": "^4.5.1"
